@@ -40,6 +40,7 @@ G_BEGIN_DECLS
 #define RSVG_ASPECT_RATIO_XMIN_YMAX (1 << 6)
 #define RSVG_ASPECT_RATIO_XMID_YMAX (1 << 7)
 #define RSVG_ASPECT_RATIO_XMAX_YMAX (1 << 8)
+#define RSVG_ASPECT_RATIO_SLICE (1 << 31)
 
 int rsvg_css_parse_aspect_ratio(const char * str);
 
